--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
       font-size: 1.5rem;
       font-weight: 500;
       color: #333;
+      
     }
 
     /* ======= Fixed Navigation Bar ======= */
@@ -44,7 +45,7 @@
       top: 0;
       left: 0;
       width: 100%;
-      background: #111;
+      background: #808080;
       color: white;
       display: flex;
       justify-content: flex-start;
@@ -79,7 +80,7 @@
 
     /* ======= Hero Section ======= */
     .hero {
-      padding-top: 7rem; /* espace pour la nav bar */
+      padding-top: 7rem; /* space for the nav bar */
       gap: 2rem;
     }
 
@@ -114,8 +115,8 @@
     }
 
     iframe {
-      width: 100%;
-      height: 100%;
+      /*width: 100%;
+      height: 100%;*/
       border: none;
       display: block;
     }
@@ -142,8 +143,8 @@
 
     .visuals iframe {
       position: absolute;
-      width: 100%;
-      height: 100%;
+      /*width: 100%;
+      height: 100%;*/
       border: none;
       opacity: 0;
       transition: opacity 0.8s ease-in-out;
@@ -151,7 +152,7 @@
 
     .visuals iframe.active {
       opacity: 1;
-      z-index: 2;
+      z-index: 1;
     }
 
     .scrolling-text {
