--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
     }
 
     iframe {
-      /*width: 100%;
-      height: 100%;*/
+      width: 100%;
+      height: 100%;
       border: none;
       display: block;
     }
@@ -124,8 +124,6 @@
     /* ======= Scrollytelling ======= */
     .scrolly-section {
       position: relative;
-      display: flex;
-      flex-direction: column;
       margin: 4rem 0;
     }
 
@@ -134,18 +132,20 @@
       top: 0;
       width: 100%;
       height: 100vh;
-      /*background: #000;*/
-      z-index: 1;
+      background: #000;
+      z-index: 0; /* On met en arrière-plan */
       display: flex;
       align-items: center;
       justify-content: center;
     }
 
     .visuals iframe {
-      position: absolute;
-      /*width: 100%;
-      height: 100%;*/
+      width: 100%;
+      height: 100%;
       border: none;
+      position: absolute;
+      top: 0;
+      left: 0;
       opacity: 0;
       transition: opacity 0.8s ease-in-out;
     }
@@ -157,30 +157,36 @@
 
     .scrolling-text {
       position: relative;
-      z-index: 3;
-      width: 100%;
+      z-index: 2; /* On garde le texte au-dessus */
       display: flex;
       flex-direction: column;
       align-items: center;
+      justify-content: center;
       color: black;
       margin-top: 100vh;
     }
 
     .step {
-      
-    min-height: 100vh; 
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    padding: 3rem;
-
+      min-height: 100vh;
+      max-width: 700px;
+      margin: 0 auto;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center; /* centrage horizontal */
+      padding: 2rem;
+      box-sizing: border-box;
+      text-align: center;
+      opacity: 0.6;
+      transition: opacity 0.3s ease, transform 0.3s ease;
+      font-size: 2rem;
     }
 
-    .step.is-active {
-      opacity: 1;
-      transform: scale(1.05);
+    .step h3 {
+      font-weight: bold; /* titre en gras */
+      margin-bottom: 1rem;
     }
-  
+
 
     /* ======= Images ======= */
     .image1-section img {
