--- a/index.html
+++ b/index.html
@@ -130,10 +130,11 @@
     .visuals {
       position: sticky;
       top: 0;
+      left: 0;
       width: 100%;
       height: 100vh;
       background: #000;
-      z-index: 0; /* On met en arrière-plan */
+      z-index: 1; 
       display: flex;
       align-items: center;
       justify-content: center;
@@ -152,18 +153,18 @@
 
     .visuals iframe.active {
       opacity: 1;
-      z-index: 1;
+      z-index: 2;
     }
 
     .scrolling-text {
       position: relative;
-      z-index: 2; /* On garde le texte au-dessus */
+      z-index: 3; 
+      width: 100%;
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: center;
       color: black;
-      margin-top: 100vh;
+      
     }
 
     .step {
@@ -181,10 +182,18 @@
       transition: opacity 0.3s ease, transform 0.3s ease;
       font-size: 2rem;
     }
+    .step.is-active {
+    opacity: 1;
+    transform: scale(1.05);
 
     .step h3 {
-      font-weight: bold; /* titre en gras */
+      font-weight: bold;
       margin-bottom: 1rem;
+    }
+
+    .step p {
+    font-size: 1.3rem;
+    line-height: 1.6;
     }
 
 
