--- a/index.html
+++ b/index.html
@@ -99,6 +99,8 @@
     .flourish2-text,
     .flourish3-text,
     .flourish4-text,
+    .flourish5-text,
+    .image-text
     .outro {
       font-size: 1.2rem;
       width: 100%;
@@ -108,9 +110,11 @@
     /* ======= Flourish Figures ======= */
     .flourish1-figure,
     .flourish3-figure,
-    .flourish4-figure {
+    .flourish4-figure,
+    .flourish5-figure
+    {
       width: 100%;
-      height: 500px;
+      height: 700px;
       margin-bottom: 1rem;
     }
 
@@ -188,11 +192,12 @@
 
     .step h3 {
       font-weight: bold;
-      margin-bottom: 1rem;
+      font-size: 2rem
+      margin-bottom: 0rem;
     }
 
     .step p {
-    font-size: 1.3rem;
+    font-size: 1.5rem;
     line-height: 1.6;
     }
 
@@ -353,6 +358,15 @@
   <section class="image1-section">
   <img src="https://p-2d475f4d-952b-49e8-89ec-c70437a32add.apps.webstudio.is/cgi/image/Open_building_Mathare__iqAmbk8HvzZxgtDd-joQ.png">
   </section>
+
+  <section class="image-text">
+  <p>Text overlay (One): Buildings appear tightly packed, filling almost every available space. But the true scale is likely even greater. 
+  Text overlay (Categorised): As an informal settlement, Mathare has many structures that are difficult to single out individually, and its growing number of multi-storey blocks means that a single footprint often houses dozens of families.
+  When we classify the verified buildings by size, most turn out to be homes.</p> 
+  </section>
+
+
+  
 
 
   
