--- a/index.html
+++ b/index.html
@@ -69,13 +69,14 @@
     /* ======= Section containers ======= */
     section {
       width: 100%;
+      hight: 100%; 
       display: flex;
       flex-direction: column;
       align-items: flex-start;
       justify-content: center;
       text-align: left;
       padding: 3rem 6rem;
-      box-sizing: border-box;
+      
     }
 
     /* ======= Hero Section ======= */
@@ -156,13 +157,13 @@
     }
 
     .visuals iframe.active {
-      opacity: 1;
+      opacity: 0;
       z-index: 2;
     }
 
     .scrolling-text {
       position: relative;
-      z-index: 3; 
+      z-index: 2; 
       width: 100%;
       display: flex;
       flex-direction: column;
@@ -178,13 +179,13 @@
       display: flex;
       flex-direction: column;
       justify-content: center;
-      align-items: center; /* centrage horizontal */
-      padding: 2rem;
+      align-items: center; 
+      padding: 1rem;
       box-sizing: border-box;
       text-align: center;
       opacity: 0.6;
       transition: opacity 0.3s ease, transform 0.3s ease;
-      font-size: 2rem;
+      font-size: 3rem;
     }
     .step.is-active {
     opacity: 1;
@@ -192,7 +193,7 @@
 
     .step h3 {
       font-weight: bold;
-      font-size: 2rem
+      font-size: 3rem
       margin-bottom: 0rem;
     }
 
