--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
       align-items: flex-start;
       justify-content: center;
       text-align: left;
+      box-sizing: border-box;
       padding: 3rem 6rem;
       
     }
@@ -129,47 +130,46 @@
     /* ======= Scrollytelling ======= */
     .scrolly-section {
       position: relative;
+      display: flex;
+      flex-direction: column;
       margin: 4rem 0;
     }
 
     .visuals {
       position: sticky;
       top: 0;
-      left: 0;
       width: 100%;
       height: 100vh;
       background: #000;
-      z-index: 1; 
+      z-index: 1;
       display: flex;
       align-items: center;
       justify-content: center;
     }
 
     .visuals iframe {
+      position: absolute;
       width: 100%;
       height: 100%;
       border: none;
-      position: absolute;
-      top: 0;
-      left: 0;
       opacity: 0;
       transition: opacity 0.8s ease-in-out;
     }
 
     .visuals iframe.active {
-      opacity: 0;
+      opacity: 1;
       z-index: 2;
     }
 
     .scrolling-text {
       position: relative;
-      z-index: 2; 
+      z-index: 3;
       width: 100%;
       display: flex;
       flex-direction: column;
       align-items: center;
       color: black;
-      
+      margin-top: 100vh;
     }
 
     .step {
@@ -179,27 +179,17 @@
       display: flex;
       flex-direction: column;
       justify-content: center;
-      align-items: center; 
-      padding: 1rem;
+      padding: 2rem;
       box-sizing: border-box;
       text-align: center;
       opacity: 0.6;
       transition: opacity 0.3s ease, transform 0.3s ease;
-      font-size: 3rem;
+      font-size: 2rem;
     }
+
     .step.is-active {
-    opacity: 1;
-    transform: scale(1.05);
-
-    .step h3 {
-      font-weight: bold;
-      font-size: 3rem
-      margin-bottom: 0rem;
-    }
-
-    .step p {
-    font-size: 1.5rem;
-    line-height: 1.6;
+      opacity: 1;
+      transform: scale(1.05);
     }
 
 
