--- a/index.html
+++ b/index.html
@@ -178,7 +178,6 @@
       margin: 0 auto;
       display: flex;
       flex-direction: column;
-      justify-content: center;
       align-items: center;
       padding: 2rem;
       box-sizing: border-box;
@@ -368,11 +367,12 @@
   When we classify the verified buildings by size, most turn out to be homes.</p> 
   </section>
 
+  <section class = "flourish5-section">
+    <div class="flourish5-figure">
+    <iframe id="vis-6" src="https://public.flourish.studio/visualisation/24880798/embed"></iframe>
+  </div>
+  </section>
 
-  
-
-
-  
   <!-- Section  : Conclusion -->
   <section class="outro">
     <h2>Conclusion</h2>
