--- a/index.html
+++ b/index.html
@@ -316,22 +316,25 @@
 <!-- Section 8 : Flourish 3 Text -->
   
 <section class="flourish3-text">
-  <h3> Mathare: Where Indoor and Outdoor Collide. </h3>
+  <h3> Air Pollution in Mathare: Where Indoor and Outdoor Collide. </h3>
   <p>
-  <p> In Mathare, Nairobi’s most densely populated sub-county, the line between outdoor and indoor pollution is almost invisible. Mathare packs <strong>206,564 people</strong> into just <strong>3 km²</strong> according to the KNBS Census, 2019; nearly <strong>69,000 residents per km²</strong>. 
+  <p> Globally, outdoor air pollution claims more lives than indoor pollution. 
+    In Mathare, Nairobi’s most densely populated sub-county, the line between the two is almost invisible. Mathare packs <strong>206,564 people</strong> into just <strong>3 km²</strong> <a href="https://www.knbs.or.ke/reports/kenya-census-2019/">(KNBS Census, 2019) </a>, nearly <strong>69,000 residents per km²</strong>. Smoke from household fuels, vehicle emissions, waste burning, and the settlement’s dense construction make the air outside as hazardous as the air inside.
   </p>
   <p>
-    The 2018 study Nature: Air pollution and infant mortality in Africa by Heft-Neal et al., suggests that current estimates for the death toll of air pollution might be too low. With two datasets: one based on household surveys, which detail the time and place of nearly one million births across sub-Saharan Africa, and another detailing spatial distribution of exposure to PM2.5 based on satellite data, they estimate the impact of air pollution on mortality rates among infants in Africa. 
+    This environmental emergency extends beyond Mathare's boundaries. As of August 2025, <a href="https://www.iqair.com/world-air-quality-ranking">Nairobi ranked as Africa’s fourth most polluted city</a>, with informal settlements like Mathare bearing the heaviest burden of this urban-wide crisis. What's happening here offers a window into how extreme density transforms individual pollution sources into collective health emergencies.
   </p>
   <p>
-    Findings show that a 10μg/m³ increase in PM2.5 concentration is associated with a 9% rise in infant mortality. This suggests that PM2.5 exposure is responsible for 22% of infant deaths in the studied countries; this means 449,000 infant deaths in 2015 alone: an extremely high death toll, suggesting the exposure-response relationship in the select African countries is steeper than previous studies.
+  We ground this story in air quality sensor data, building footprints, census records, and emissions tracking that reveal how geography, poverty, and policy failures converge to create one of Kenya’s most toxic neighborhoods.  
   </p>
-
-<p>Smoke from household fuels, waste burning, and the settlement’s dense construction make the air outside as hazardous as the air inside: smoke, crowding, and trapped pollution.</p>
 
 <h3>Sensors tell the story</h3>
 
-<p>From 2019 to 2024, data from Mathare’s air quality sensors show a steady rise in pollution. Fine particulate matter (PM₂.₅) reached levels nearly <strong>eight times</strong> higher than the WHO’s safe annual limit of <strong>5 µg/m³</strong>, while coarse particles (PM₁₀)  more than doubled the recommended <strong>15 µg/m³</strong>.</p>
+<p>
+From 2019 to 2024, data from Mathare’s <a href="https://sensors.africa/air/city/nairobi">air quality sensors</a> show a steady rise in pollution. 
+Fine particulate matter (PM₂.₅) reached levels nearly <strong>eight times</strong> higher than the WHO’s safe annual limit of <strong>5 µg/m³</strong>, while coarse particles (PM₁₀)  more than <strong>doubled</strong> the recommended <strong>15 µg/m³</strong>.
+Every year, the air has grown more hazardous to breathe.
+</p>
 
 <p>Every year, the air has grown more hazardous to breathe.</p>
   
@@ -347,11 +350,12 @@
 
   <!-- Section 10 : Flourish 4 Text -->
   <section class="flourish3-text">
-  <p>At these concentrations, the risks are severe. The WHO notes that long-term exposure to PM₂.₅ and PM₁₀ increases the likelihood of asthma, heart disease, stroke, and premature death. In Mathare, this means residents are constantly breathing air that carries invisible but life-threatening health costs.
+  <p>At these concentrations, the risks are severe. The <a href="https://www.who.int/teams/environment-climate-change-and-health/air-quality-energy-and-health/health-impacts">WHO</a> notes that long-term exposure to PM₂.₅ and PM₁₀ increases the likelihood of asthma, heart disease, stroke, and premature death. In Mathare, this means residents are constantly breathing air that carries invisible but life-threatening health costs.
   To understand why pollution accumulates so heavily here, we need to look beyond the sensors, to Mathare’s built environment; dense housing and limited open space shaping how air moves through the settlement.</p> 
+  
   <h3>Buildings reveal the density</h3>
 
-  <p>Using Google’s Open Buildings dataset, we verified 775 structures within the Mathare boundary.</p>
+  <p>Using <a href= "https://sites.research.google/gr/open-buildings/">Google’s Open Buildings</a> dataset, we verified 775 structures within the Mathare boundary.</p>
   </section>
 
 
@@ -362,16 +366,44 @@
   </section>
 
   <section class="image-text">
-  <p>Text overlay (One): Buildings appear tightly packed, filling almost every available space. But the true scale is likely even greater. 
-  Text overlay (Categorised): As an informal settlement, Mathare has many structures that are difficult to single out individually, and its growing number of multi-storey blocks means that a single footprint often houses dozens of families.
-  When we classify the verified buildings by size, most turn out to be homes.</p> 
+  <p>
+    Behind every footprint on the map are families whose numbers, housing conditions, and energy choices all determine how polluted the air becomes.The census data reveals just how intense this human pressure is.
+  </p> 
+  <p>
+    When we classify these verified buildings by area, the dominance of residential structures becomes clear.
+  </p> 
   </section>
+
+  <!-- Section 12 : Flourish 5 chart -->
 
   <section class = "flourish5-section">
     <div class="flourish5-figure">
     <iframe id="vis-6" src="https://public.flourish.studio/visualisation/24880798/embed"></iframe>
   </div>
   </section>
+  
+ <!-- Section 13 : Flourish 5 Text -->
+
+  <section class = "flourish5-text">
+  <p>
+  The treemap highlights how residential structures dominate the settlement, from small single-room units to larger mixed units. The combination of cramped housing and limited open space leaves little room for pollutants to disperse, trapping poor air both inside and outside homes.
+  </p>
+  </section>
+
+
+   <!-- Section 13 : Image 2 (satellite) -->
+
+  <section class="image1-section">
+  <img src="image.png" >
+  </section>
+
+
+  
+  
+
+  
+
+  
 
   <!-- Section  : Conclusion -->
   <section class="outro">
@@ -382,12 +414,7 @@
   </section>
 
 
-  <!-- About Section -->
-  <section id="about">
-    <h2>About</h2>
-    <p>This project explores the impact of air pollution on health, infrastructure, and inequality across Africa, using data visualisations and scrollytelling for better understanding.</p>
-  </section>
-
+ 
 
   <script>
     document.addEventListener('DOMContentLoaded', () => {
