--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@ Every year, the air has grown more hazardous to breathe.
    <!-- Section 11 : Image 1 (satellite) -->
 
   <section class="image1-section">
-  <img src="https://p-2d475f4d-952b-49e8-89ec-c70437a32add.apps.webstudio.is/cgi/image/Open_building_Mathare__iqAmbk8HvzZxgtDd-joQ.png">
+  <img src="Screenshot_11.png">
   </section>
 
   <section class="image-text">
@@ -394,7 +394,7 @@ Every year, the air has grown more hazardous to breathe.
    <!-- Section 13 : Image 2 (satellite) -->
 
   <section class="image1-section">
-  <img src="image.png" >
+  <img src="Mathare Classes 2.png" >
   </section>
 
 
