--- a/index.html
+++ b/index.html
@@ -102,6 +102,9 @@
     .flourish3-text,
     .flourish4-text,
     .flourish5-text,
+    .flourish6-text,
+    .flourish7-text,
+    .flourish8-text,
     .image-text
     .outro {
       font-size: 1.2rem;
@@ -113,7 +116,10 @@
     .flourish1-figure,
     .flourish3-figure,
     .flourish4-figure,
-    .flourish5-figure
+    .flourish5-figure,
+    .flourish6-figure,
+    .flourish7-figure,
+    .flourish8-figure,
     {
       width: 100%;
       height: 700px;
@@ -396,10 +402,113 @@ Every year, the air has grown more hazardous to breathe.
   <section class="image1-section">
   <img src="Mathare Classes 2.png" >
   </section>
+  
+   <!-- Section 14 : Image 2 Text -->
+  
+  <section class="image-text">
+  <p>
+  Behind every footprint on the map are families whose numbers, housing conditions, and energy choices all determine how polluted the air becomes.The census data reveals just how intense this human pressure is.
+  </p>
+  </section>
+
+  <!-- Section 15 : Flourish 6 Text -->
+
+<section class="flourish6-text">
+
+<h3>
+  The People Behind the Numbers
+</h3>
+
+<p>
+The <a href="https://www.knbs.or.ke/reports/kenya-census-2019/">2019 KNBS Census</a> reveals just how intense this density is. Nearly <strong>69,000</strong> people live in every <strong>square kilometre</strong> of Mathare, almost <strong>three times</strong> the density of Kamukunji, Nairobi's second-most dense sub-county.
+</p>  
+</section>
+
+<!-- Section 16 : Flourish 6 chart -->
+
+<section class = "flourish6-section">
+    <div class="flourish6-figure">
+    <iframe id="vis-7" src="https://public.flourish.studio/visualisation/24881919/embed"></iframe>
+  </div>
+<p>
+Housing patterns reflect this pressure. About half of households live under iron-sheet roofs, while the others are stacked in concrete-roofed buildings. This distinction matters for air quality.
+</p>
+</section>
+
+<!-- Section 17 : Single-Step Scrollytelling -->
+<section class="scrolly-section">
+  <div class="visuals">
+    <iframe id="vis-8" src="https://public.flourish.studio/visualisation/24882063/embed"></iframe>
+  </div>
+
+  <div class="scrolling-text">
+    <div class="step" data-target="vis-9">
+      <h3>Housing Materials in Mathare</h3>
+      <p>
+        Iron-sheet roofing usually points to single-storey structures, while concrete or cement slabs are a marker of multi-storey housing.
+    </p>
+    <p>
+      This means, a single building footprint on our buildings map can stack many families on top of one another, multiplying the emissions and smoke produced in the same limited space.
+    </p>
+      
+    </div>
+  </div>
+</section>
+
+<!-- Section 18 : Flourish 7 Text -->
+
+  <section class="flourish7-text">
+  <p>
+   Energy choices in Mathare show why air pollution persists indoors. Almost <strong>half of households</strong> rely on paraffin (kerosene) for cooking, a fuel the World Health Organization classifies as highly polluting. 
+  </p>
+</section>
+  
+<!-- Section 19 : Flourish 7 chart -->
+
+<section class = "flourish7-section">
+    <div class="flourish7-figure">
+    <iframe id="vis-9" src="https://public.flourish.studio/visualisation/24882364/embed"></iframe>
+  </div>
+<p>
+Every day, families fill their homes with PM₂.₅, carbon monoxide, and toxic fumes. while others depend on charcoal or firewood. Even households using cleaner LPG often cook in poorly ventilated rooms, allowing smoke to escape outside where it mingles with emissions from neighboring homes.
+</p>
+<p>
+The census data confirms what the sensors measure, in Mathare, dense living conditions and heavy reliance on polluting fuels turn every household into a source of outdoor air pollution.
+</p>
+</section>
+
+<!-- Section 20 : Flourish 8 Text -->
+  
+<section class="flourish6-text">
+<h3>
+  Traffic Adds Another Layer of Toxic Air
+</h3>
+
+<p>
+Beyond the smoke from thousands of cooking fires, busy roads cutting through Mathare deliver a constant stream of nitrogen oxides (NOx) that residents cannot escape as they navigate their community.
+</p>  
+<p>
+  <a href="https://climatetrace.org/explore/#admin=Mathare%20Constituency--%20Nairobi%20County--%20KEN:25221:KEN.30.13_1:county&gas=co2e&year=2024&timeframe=100&sector=&asset=3601371">climate TRACE</a> data reveals that road transport in Mathare generates approximately 34-37 tonnes of NOx emissions annually. While this represents a modest decline from 2021 levels, the persistent pollution load means that pathways where children play and vendors sell goods remain saturated with toxic air.
+</p>  
+</section>
+  
+<!-- Section 21 : Flourish 8 Figure -->
+<section class = "flourish8-section">
+    <div class="flourish8-figure">
+    <iframe id="vis-10" src="https://public.flourish.studio/visualisation/25137102/embed"></iframe>
+  </div>
+<p>
+Once released, these Nitrogen Oxides (NOx) emissions convert into nitrogen dioxide (NO₂) and contribute to ground-level ozone formation respiratory irritants that cause chest pain and throat inflammation.
+</p>
+<p>
+Unlike household cooking smoke that residents can sometimes control by opening doors or cooking outside, traffic pollution is constant and inescapable.
+</p>
+<p>
+For Mathare's residents, this means the busy corridors where people walk to work, children play, and vendors sell goods are contaminated with pollutants. The persistent Nitrogen Oxides (NOx) levels ensure that outdoor air remains unhealthy even without the added burden from household cooking fuels and waste burning.
+</p>
+</section>
 
 
-  
-  
 
   
 
