--- a/index.html
+++ b/index.html
@@ -111,18 +111,19 @@
     .flourish5-figure,
     .flourish6-figure,
     .flourish7-figure,
-    .flourish8-figure,
-    {
+    .flourish8-figure {
       width: 100%;
+      aspect-ratio: 16 / 9;
       margin-bottom: 1rem;
     }
-
+    
     iframe {
       width: 100%;
       height: 100%;
       border: none;
       display: block;
     }
+
 
     /* ======= Scrollytelling ======= */
     .scrolly-section {
