--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       justify-content: center;
       text-align: left;
       box-sizing: border-box;
-      padding: 3rem 6rem;
+      padding: 1.5rem 6rem;
       
     }
 
@@ -138,7 +138,7 @@
       top: 0;
       width: 100%;
       height: 100vh;
-      background: #000;
+      /*background: #000;*/
       z-index: 1;
       display: flex;
       align-items: center;
@@ -551,7 +551,7 @@
           In 2024, Dandora landfill released about 18,172 tonnes of Methane(CH₄), emissions that have steadily climbed from approximately 17,000 tonnes in 2021.
         </p>
         <p>
-          While methane doesn't directly damage the lungs like PM₂.₅, its atmospheric effects make Mathare's existing pollution crisis worse.      </p>
+          While methane doesn't directly damage the lungs like PM₂.₅, its atmospheric effects make Mathare's existing pollution crisis worse.</p>
       </div>
     </div>
   </section>
