--- a/index.html
+++ b/index.html
@@ -541,17 +541,17 @@
   <!-- Section 23 : Single scrolly 2 -->
   <section class="scrolly-section">
     <div class="visuals">
-      <iframe id="vis-10" src="https://public.flourish.studio/visualisation/25137102/embed"></iframe>
+      <iframe id="vis-11" src="https://public.flourish.studio/visualisation/25137102/embed"></iframe>
     </div>
-  
     <div class="scrolling-text">
-      <div class="step" data-target="vis-10">
+      <div class="step" data-target="vis-11">
         <h3>Dandora landfill: Methane-heavy Emissions</h3>
         <p>
           In 2024, Dandora landfill released about 18,172 tonnes of Methane(CH₄), emissions that have steadily climbed from approximately 17,000 tonnes in 2021.
         </p>
         <p>
-          While methane doesn't directly damage the lungs like PM₂.₅, its atmospheric effects make Mathare's existing pollution crisis worse.</p>
+          While methane doesn't directly damage the lungs like PM₂.₅, its atmospheric effects make Mathare's existing pollution crisis worse.
+        </p>
       </div>
     </div>
   </section>
