--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     /* ======= Global Styles ======= */
     body {
       margin: 20px;
-      font-family: "Poppins", Arial, sans-serif;
+      font-family: "Instrument Sans", sans-serif;
       background: #F5F5F5;
       color: #111;
       overflow-x: hidden;
