--- a/index.html
+++ b/index.html
@@ -556,7 +556,6 @@
     </div>
   </section>
   
-  
   <section class = "intro-text">  
     <p>
       As methane escapes from decomposing waste, it creates atmospheric conditions that act like an invisible lid over the informal settlement, preventing other pollutants from dispersing naturally. 
@@ -572,14 +571,37 @@
     </p>
   </section>
   
-    <!-- Section  : Conclusion -->
+  <!-- Section 24 : Soudan -->
+  <section class="intro-text">
+    <p> South Sudan: Heating up and its effects on air quality </p>
+    <p>
+      Climate change, a phenomenon referring to long-term shifts in temperatures and weather patterns, has been recorded as mainly driven by human activities. Heatwaves have been known to amplify air pollution risks in Sub-Saharan Africa. Greenhouse gases trap heat, causing the planet's average temperature to rise, and some impacts of climate change exacerbate air quality issues. 
+    </p>
+    <p>
+      On the African continent, we will look at South Sudan, an outlier in temperature anomaly.
+    </p>
+   
+  </section>
+  
+  <!-- Section  : Conclusion -->
     <section class="outro">
       <h2>Conclusion</h2>
       <p>
-        These graphics highlight the urgent need to implement public health policies adapted to the most affected regions.
+        Addressing air pollution in Africa is of great importance for various reasons. Studies suggest a link between air pollution and increased anxiety and other mental health issues like depression, schizophrenia, eating disorders and addictive behaviors. However, Africa receives the least amount of support to address air quality, with merely 3.7% of total development assistance being invested in the continent according to the Africa Clean Air Programme.      
       </p>
+      <p>
+        Policies and investments supporting cleaner transport, energy efficient homes, power generation, industry and better municipal waste management would reduce key sources of outdoor air pollution. Access to clean household energy would also greatly reduce ambient air pollution in some regions.
+      </p>
+      <p>
+        Actionable data is one step towards creating systems that will be a lasting solution to the matter. Expanding air quality monitoring across the continent should be fasttracked with the data then used to assess the links to disease. Hence policymakers can direct regulations and public health interventions. Additionally, public health education should be considered to raise awareness.
+      </p>
+      
     </section>
+    
+
+  
 </section>
+
 
   
 <section id="about" class="tab-content">
