--- a/index.html
+++ b/index.html
@@ -811,6 +811,30 @@
       });
     });
 
+    document.addEventListener('DOMContentLoaded', () => {
+    const steps = document.querySelectorAll('.scrolly-image-section .step');
+    const images = document.querySelectorAll('.scrolly-image-section .visuals img');
+  
+    const observer = new IntersectionObserver((entries) => {
+      entries.forEach(entry => {
+        if (entry.isIntersecting) {
+          // Activate step
+          steps.forEach(s => s.classList.remove('is-active'));
+          entry.target.classList.add('is-active');
+  
+          // Show corresponding image
+          const targetId = entry.target.dataset.target;
+          images.forEach(img => img.classList.remove('active'));
+          const activeImg = document.getElementById(targetId);
+          if(activeImg) activeImg.classList.add('active');
+        }
+      });
+    }, { threshold: 0.5 });
+  
+    steps.forEach(step => observer.observe(step));
+  });
+
+
   </script>
 
 </body>
