--- a/index.html
+++ b/index.html
@@ -54,8 +54,9 @@
    }
   
     nav .nav-right {
-      margin-left: auto; 
-    }
+    margin-left: auto;
+    margin-right: 2rem;
+  }
   
     nav a {
     color: white;
