--- a/index.html
+++ b/index.html
@@ -55,8 +55,12 @@
   
     nav .nav-right {
     margin-left: auto;
-    margin-right: 4rem;
+    margin-right: 6rem;
   }
+    nav .nav-right {
+      margin-right: auto;
+      margin-right: 6rem;
+    }
   
     nav a {
     color: white;
