--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
     top: 0;
     left: 0;
     width: 100%;
-    background: #808080;
-    color: white;
+    background: #FFFFFF;
+    color: black;
     display: flex;
     justify-content: flex-start;
-    gap: 2rem;
+    gap: 4rem;
     padding: 1rem 2rem;
     z-index: 1000;
    }
