--- a/index.html
+++ b/index.html
@@ -638,7 +638,7 @@
         </div> 
       </div> 
       <div class="visuals">
-          <img id="img-1" src="Bentiu-Sudan.png" class="active">
+          <img id="img-1" src="Bentiu-Sudan.png">
           <img id="img-2" src="Bor-Sudan.png">
           <img id="img-3" src="Juba-Sudan.png">
         </div>
