--- a/index.html
+++ b/index.html
@@ -243,12 +243,12 @@
       position: sticky;
       top: 0;
       width: 60%;
-      height: 50vh; 
+      height: 70vh; 
       display: flex;
       justify-content: center;
       align-items: center;
       overflow: hidden;
-      background: #000;
+      background: white;
     }
     
     .scrolly-image-section .visuals img {
