--- a/index.html
+++ b/index.html
@@ -91,13 +91,13 @@
 
     /* ======= Hero Section ======= */
     .hero {
-      padding-top: 7rem; /* space for the nav bar */
+      padding-top: 5rem; /* space for the nav bar */
       gap: 2rem;
     }
 
     .hero .image img {
       width: 100%;
-      height: auto;
+      height: 300px;
       object-fit: cover;
       border-radius: 0px;
       box-shadow: 0 0 20px rgba(0,0,0,0.1);
