--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
 
     .hero .image img {
       width: 100%;
-      height: 300px;
-      object-fit: cover;
+      height: auto;
+      object-fit: contain;
       border-radius: 0px;
       box-shadow: 0 0 20px rgba(0,0,0,0.1);
       display: block;
