--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
     .flourish7-figure,
     .flourish8-figure {
       width: 100%;
+      height: 500px;
       aspect-ratio: 16 / 9;
       margin-bottom: 1rem;
     }
