--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
           <h3>Air pollution and climate change are a deadly duo for Africa.</h3>
         </div>
         <div class="image">
-          <img src="https://images.pexels.com/photos/10666664/pexels-photo-10666664.jpeg">
+          <img src="landing-image.webp">
         </div>
       </div>
     </section>
