--- a/index.html
+++ b/index.html
@@ -175,6 +175,7 @@
       display: flex;
       flex-direction: column;
       align-items: center;
+      text-align: center;
       color: black;
       margin-top: 100vh;
     }
@@ -631,13 +632,13 @@
       <section class="scrolly-image-section">
       <div class="scrolling-text">
         <div class="step" data-target="img-1">
-          <p>Bentiu, found in Unity State, in the North of South Sudan records a temperature increase of 3.0 °C.</p>
+          <p>Bentiu, found in Unity State, in the North of South Sudan records a temperature increase of <strong>3.0 °C</strong>.</p>
         </div>
         <div class="step" data-target="img-2">
-          <p>Bor, found in Jonglei State, in Central South Sudan records a temperature increase of 2.8 °C</p>
+          <p>Bor, found in Jonglei State, in Central South Sudan records a temperature increase of <strong>2.8 °C</strong></p>
         </div>
         <div class="step" data-target="img-3">
-          <p>Juba, found in the Central Equatoria State, in Southern South Sudan records a temperature increase of 2.6°C</p>
+          <p>Juba, found in the Central Equatoria State, in Southern South Sudan records a temperature increase of <strong>2.6 °C </strong></p>
         </div> 
       </div> 
       <div class="visuals">
